test/Fail/Issue721c.err
Issue721c.agda:20.30-31: error: [UnequalTypes]
The type
  Bool
is not a subtype of
  t ≡ t
when checking that the expression t has type t ≡ t
